--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "ChatGPT Code Highlighter",
+  "name": "ChatGPT Styler",
   "version": "1.0",
   "description": "Improve the appearance of code snippets in ChatGPT code snippets.",
-  "permissions": ["activeTab", "storage"], 
+  "permissions": ["activeTab", "storage","<all_urls>"], 
   "action": {
     "default_popup": "popup.html"
   },
@@ -18,7 +18,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://chat.openai.com/*"],
+      "matches": ["*://chat.openai.com/*"],
       "js": ["styleChanger.js"], 
       "run_at": "document_idle"
 
@@ -48,7 +48,7 @@
         "background-8.css",
         "background-9.css"
       ],
-      "matches": ["https://chat.openai.com/*"]
+      "matches": ["*://chat.openai.com/*"]
     }
   ]
 }
